--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "backend-logistica",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
@@ -11,7 +11,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "base64-stream": "^1.0.0",
     "bcrypt": "^6.0.0",
